# ghc

./: .env.example  .env.production.example  .gitignore  README.md  agents.md  integration strategy v2 plan.md  package-lock.json  prd-ghc-platform-base-ui-theme.txt  prd-ghc-platform-ui-refactor.txt  prd-precanon-market-research-refactor.txt  prd.txt  test_shopify_app.db  theme_image_slot_config.json
ghc-platform/backend/: .dockerignore  Dockerfile  README.md  SMOKE_TESTS.md  pyproject.toml
ghc-platform/backend/app/: config.py  google_clients.py  main.py
ghc-platform/backend/docs/: database_schema.md
ghc-platform/backend/tests/: conftest.py  test_api.py  test_funnels.py
mos/backend/: .env.example  Dockerfile  README.md  SMOKE_TESTS.md  alembic.ini  pyproject.toml
mos/backend/.tmp/: design_system_cfaa36fe-a0bc-466d-a1bb-3a12c17a3ce2.json
mos/backend/alembic/: env.py  script.py.mako
mos/backend/app/: config.py  env_loader.py  google_clients.py  main.py
mos/backend/artifact-downloads/: funnel_remediation_execution_plan_2026-03-05.md  honest_herbalist_design_system_backup_2026-03-05.json  honest_herbalist_design_system_backup_2026-03-05_readability_pass.json  honest_herbalist_design_system_backup_2026-03-05_typography_pass.json  honest_herbalist_full_funnel_generation_2026-03-05_run_7fa83f2e.md  offer_agent_prompt_remediation_outline_2026-03-05.md  offer_agent_runtime_regeneration_validation_2026-03-05_run_732c4f5c.md  strategy_v2_apify_smoke_report_instagram.json  strategy_v2_apify_smoke_report_meta.json  strategy_v2_apify_smoke_report_reddit.json  strategy_v2_apify_smoke_report_tiktok.json  strategy_v2_apify_smoke_report_web.json  strategy_v2_apify_smoke_report_youtube.json  strategy_v2_copy_loop_report_2026-03-04_run_1376bc33.md  strategy_v2_copy_loop_report_2026-03-04_run_3e2082eb.md  strategy_v2_copy_loop_report_2026-03-04_run_5a0c391a.md  strategy_v2_copy_loop_report_2026-03-04_run_636c9968.md  strategy_v2_copy_loop_report_2026-03-04_run_648a6128.md  strategy_v2_copy_loop_report_2026-03-04_run_a488a6f9.md  strategy_v2_copy_loop_report_2026-03-04_run_e4b2755c.md  strategy_v2_end_to_end_completion_2026-03-04_run_f9e71aad.md  strategy_v2_final_campaign_preview_2026-03-04_run_f9e71aad.md  strategy_v2_launch_attempt_2026-03-04_run_019cbbbc.md  strategy_v2_no_clipping_validation_2026-03-05_run_2c917260.md  strategy_v2_parser_replay_report_2026-03-04_run_e4b2755c.md  strategy_v2_phase1_execution_validation_2026-03-05_run_ff1df62f.md  strategy_v2_schema_translation_deep_dive_2026-03-04_run_1376bc33.md  strategy_v2_style_runtime_validation_2026-03-05_run_cbf58966.md  strategy_v2_template_payload_success_2026-03-04_run_f9e71aad.md
mos/backend/cloudhand/: cli.py  models.py
mos/backend/docs/: database_schema.md  strategy_v2_implementation_plan.md
mos/backend/scripts/: backfill_design_system_brand_logos.py  publish_pagefly_generated_slots.py  run_design_system_audit.py  run_pagefly_swipe_full_batch.py  (+3 more)
shopify-funnel-app/: .env.example  .gitignore  PARTNER_DASHBOARD_CHECKLIST.md  README.md  package-lock.json  package.json  pyproject.toml  shopify.app.toml
shopify-funnel-app/app/: config.py  db.py  main.py  models.py  schemas.py  security.py  shopify_api.py
shopify-funnel-app/scripts/: run-prod.sh  setup-ubuntu22.sh  validate_theme_zip_upload.py
shopify-funnel-app/tests/: conftest.py  test_main.py  test_schemas.py  test_security.py  test_shopify_api.py
(+1191 files in other folders)
