[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketi-shopify-funnel-app"
version = "0.1.0"
description = "Shopify app bridge for Marketi funnel checkout"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings",
  "python-dotenv",
  "orjson",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
