[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghc-backend"
version = "0.1.0"
description = "FastAPI backend for ghc-platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0.0",
  "alembic",
  "psycopg2-binary",
  "pydantic>=2.0.0",
  "pydantic-settings",
  "python-jose[cryptography]",
  "httpx",
  "temporalio",
  "tenacity",
  "structlog",
  "python-dotenv",
  "orjson",
  "typing-extensions",
  "google-api-python-client",
  "google-auth",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "google-generativeai",
  "anthropic",
  "openai>=1.52.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx[http2]",
  "ruff",
  "black",
  "mypy",
  "types-requests",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
